# codepipeline-eb-mlops

./: .gitignore  Dockerfile  Dockerrun.aws.json  LICENSE  MANIFEST.ini  Makefile  README.md  buildspec.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
src/: app.py  feature_engineering.py  model_training.py  prediction.py
src/fraud_detector/: app.py  feature_engineering.py  model_training.py  prediction.py
tests/: test_feature_engineering.py  test_model_training.py  test_prediction.py
