[metadata]
name = fraud detector
description = toy example of a fraud detector
author = Marcos Miranda
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    fraud_detector
install_requires =
    pandas>=1.3
    scikit-learn>=1.0
    boruta>=0.3
    imbalanced-learn>=0.8
    lightgbm>=3.3
    optuna>=2.10
    fastapi>=0.70
    uvicorn[standard]>=0.15
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
include_package_data = yes

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=3.0
    mypy>=0.910
    flake8>=4.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 119